--- a/css/style.css
+++ b/css/style.css
@@ -275,7 +275,6 @@ p {
 
 .footer {
   position: relative;
-  top: 1060px;
   text-align: center;
 }
 
@@ -387,6 +386,34 @@ p {
 
 #top .main .logs_image_03 {
   background-image: url("../img/tranporin.JPG");
+}
+
+#top .main .logs_image_04 {
+  background-image: url("../img/azisai.JPG");
+}
+
+#top .main .logs_image_05 {
+  background-image: url("../img/kourankei.jpeg");
+}
+
+#top .main .logs_image_06 {
+  background-image: url("../img/kimono.jpeg");
+}
+
+#top .main .logs_image_07 {
+  background-image: url("../img/sakushima.jpeg");
+}
+
+#top .main .logs_image_08 {
+  background-image: url("../img/syounairyokuti.jpeg");
+}
+
+#top .main .logs_image_09 {
+  background-image: url("../img/shibahu.jpeg");
+}
+
+#top .main .logs_image_10 {
+  background-image: url("../img/record.PNG");
 }
 
 #top .main .logs_list {
@@ -679,6 +706,269 @@ p {
 }
 
 #top .main .post .link_button_post .link_icon {
+  margin-right: 6px;
+}
+
+#top .footer {
+  top: 1000px;
+}
+
+#album .main {
+  margin: 0;
+  width: 375px;
+}
+
+#album .main section {
+  width: 90%;
+  height: 100%;
+  margin: 0 auto;
+  padding-top: 10px;
+  padding-bottom: 40px;
+  margin-bottom: 40px;
+  border-top: 1px solid #edece6;
+}
+
+#album .main section .section_title {
+  text-align: center;
+  margin: 16px 0;
+  padding-bottom: 10px;
+}
+
+#album .main section .section_title i {
+  margin-right: 6px;
+}
+
+#album .main .logs {
+  position: relative;
+}
+
+#album .main .logs_list_item {
+  width: 100%;
+}
+
+#album .main .logs_image {
+  height: 500px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+#album .main .logs_image_tag {
+  display: block;
+  background-color: #fffef8;
+  width: 300px;
+  z-index: 10;
+  position: relative;
+  top: calc(500px - 100px);
+  border-top-right-radius: 10px;
+  padding: 10px;
+}
+
+#album .main .logs_image_tag h3 {
+  font-size: 0.8rem;
+  color: #ffd54d;
+}
+
+#album .main .logs_image_tag .text {
+  font-size: 1.0rem;
+  font-weight: bold;
+  line-height: 1.6;
+}
+
+#album .main .logs_image_tag .place {
+  font-size: 0.8rem;
+  line-height: 1.6;
+  color: #444;
+}
+
+#album .main .logs_image_tag .hashtag_list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#album .main .logs_image_tag .hashtag_list_item {
+  color: #666;
+  font-size: 0.8rem;
+  margin-right: 4px;
+}
+
+#album .main .logs_image_01 {
+  background-image: url("../img/top.jpeg");
+}
+
+#album .main .logs_image_02 {
+  background-image: url("../img/oneyear.jpeg");
+}
+
+#album .main .logs_image_03 {
+  background-image: url("../img/tranporin.JPG");
+}
+
+#album .main .logs_image_04 {
+  background-image: url("../img/azisai.JPG");
+}
+
+#album .main .logs_image_05 {
+  background-image: url("../img/kourankei.jpeg");
+}
+
+#album .main .logs_image_06 {
+  background-image: url("../img/kimono.jpeg");
+}
+
+#album .main .logs_image_07 {
+  background-image: url("../img/sakushima.jpeg");
+}
+
+#album .main .logs_image_08 {
+  background-image: url("../img/syounairyokuti.jpeg");
+}
+
+#album .main .logs_image_09 {
+  background-image: url("../img/shibahu.jpeg");
+}
+
+#album .main .logs_image_10 {
+  background-image: url("../img/record.PNG");
+}
+
+#album .main .logs_list_item {
+  margin-bottom: 100px;
+}
+
+#album .main .link_button_top {
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 90%;
+  margin: 0 auto;
+  border: 1px solid #ffd54d;
+  border-radius: 10px;
+  background-color: #ffd54d;
+  color: #fffef8;
+}
+
+#album .main .link_button_top .link_icon {
+  margin-right: 6px;
+}
+
+#album .logs {
+  position: relative;
+}
+
+#album .logs_list_item {
+  width: 100%;
+}
+
+#album .logs_image {
+  height: 500px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+#album .logs_image_tag {
+  display: block;
+  background-color: #fffef8;
+  width: 300px;
+  z-index: 10;
+  position: relative;
+  top: calc(500px - 100px);
+  border-top-right-radius: 10px;
+  padding: 10px;
+}
+
+#album .logs_image_tag h3 {
+  font-size: 0.8rem;
+  color: #ffd54d;
+}
+
+#album .logs_image_tag .text {
+  font-size: 1.0rem;
+  font-weight: bold;
+  line-height: 1.6;
+}
+
+#album .logs_image_tag .place {
+  font-size: 0.8rem;
+  line-height: 1.6;
+  color: #444;
+}
+
+#album .logs_image_tag .hashtag_list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#album .logs_image_tag .hashtag_list_item {
+  color: #666;
+  font-size: 0.8rem;
+  margin-right: 4px;
+}
+
+#album .logs_image_01 {
+  background-image: url("../img/top.jpeg");
+}
+
+#album .logs_image_02 {
+  background-image: url("../img/oneyear.jpeg");
+}
+
+#album .logs_image_03 {
+  background-image: url("../img/tranporin.JPG");
+}
+
+#album .logs_image_04 {
+  background-image: url("../img/azisai.JPG");
+}
+
+#album .logs_image_05 {
+  background-image: url("../img/kourankei.jpeg");
+}
+
+#album .logs_image_06 {
+  background-image: url("../img/kimono.jpeg");
+}
+
+#album .logs_image_07 {
+  background-image: url("../img/sakushima.jpeg");
+}
+
+#album .logs_image_08 {
+  background-image: url("../img/syounairyokuti.jpeg");
+}
+
+#album .logs_image_09 {
+  background-image: url("../img/shibahu.jpeg");
+}
+
+#album .logs_image_10 {
+  background-image: url("../img/record.PNG");
+}
+
+#album .logs .link_button_album {
+  position: absolute;
+  top: 600px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 100%;
+  margin: 0 auto;
+  border: 1px solid #ffd54d;
+  border-radius: 10px;
+  background-color: #ffd54d;
+  color: #fffef8;
+}
+
+#album .logs .link_button_album .link_icon {
   margin-right: 6px;
 }
 /*# sourceMappingURL=style.css.map */
