--- a/_src/sass/style.scss
+++ b/_src/sass/style.scss
@@ -9,12 +9,8 @@
 
 #album {
     @import "album";
-    .logs {
-        position: relative;
-        @include logs_list;
-        // @include list_animation;
-        .link_button_album {
-            @include link_button(600px);
-        }
-    }
+}
+
+#event {
+    @import "event";
 }
