--- a/css/style.css
+++ b/css/style.css
@@ -978,4 +978,123 @@ p {
 #event .main .link_button_top .link_icon {
   margin-right: 6px;
 }
+
+#post .main {
+  margin: 0;
+  width: 375px;
+}
+
+#post .main section {
+  width: 90%;
+  height: 100%;
+  margin: 0 auto;
+  padding-top: 10px;
+  padding-bottom: 40px;
+  margin-bottom: 40px;
+  border-top: 1px solid #edece6;
+}
+
+#post .main section .section_title {
+  text-align: center;
+  margin: 16px 0;
+  padding-bottom: 10px;
+}
+
+#post .main section .section_title i {
+  margin-right: 6px;
+}
+
+#post .main .post_image {
+  margin-bottom: 20px;
+  width: 100%;
+  opacity: 0.7;
+  height: 300px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+#post .main .post_image_title {
+  color: #fffef8;
+  opacity: 1;
+  text-align: center;
+  position: relative;
+  top: 100px;
+  font-size: 2rem;
+  background-color: rgba(0, 0, 0, 0.6);
+  padding: 1rem 0;
+  width: 96%;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+#post .main .post_image_title_orange {
+  color: #e29c05;
+}
+
+#post .main .post_image_01 {
+  background-image: url("../img/tsurugi.jpeg");
+}
+
+#post .main .post_image_02 {
+  background-image: url("../img/camp.jpg");
+}
+
+#post .main .post_image_tag {
+  display: block;
+  background-color: #fffef8;
+  width: 300px;
+  z-index: 10;
+  position: relative;
+  top: calc(90px - 100px);
+  border-top-right-radius: 10px;
+  padding: 10px;
+}
+
+#post .main .post_image_tag h3 {
+  font-size: 0.8rem;
+  color: #ffd54d;
+}
+
+#post .main .post_image_tag .text {
+  font-size: 1.0rem;
+  font-weight: bold;
+  line-height: 1.6;
+}
+
+#post .main .post_image_tag .place {
+  font-size: 0.8rem;
+  line-height: 1.6;
+  color: #444;
+}
+
+#post .main .post_image_tag .hashtag_list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#post .main .post_image_tag .hashtag_list_item {
+  color: #666;
+  font-size: 0.8rem;
+  margin-right: 4px;
+}
+
+#post .main .link_button_top {
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 90%;
+  margin: 0 auto;
+  border: 1px solid #ffd54d;
+  border-radius: 10px;
+  background-color: #ffd54d;
+  color: #fffef8;
+}
+
+#post .main .link_button_top .link_icon {
+  margin-right: 6px;
+}
 /*# sourceMappingURL=style.css.map */
